tests/stage2/t3_diagnostics/type_errors/unresolved_method_list.fuse
// EXPECTED ERROR:
// no method `concat` on type `List<Int>`
// did you forget `import stdlib.core.list`?

@entrypoint
fn main() {
  val xs: List<Int> = [1, 2, 3]
  val ys: List<Int> = [4, 5, 6]
  val combined = xs.concat(ys)
  println(combined.len())
}
